--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 title: Shreya Barman
-description: Management professional | Digital strategy, product & project management
-remote_theme: pages-themes/architect@v0.2.0
+description: Early-career management graduate | Digital Strategy · Product & Project Management · Business Analysis
+
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme
+
+# Optional site metadata
+url: https://shreya0903.github.io
+linkedin: https://www.linkedin.com/in/shreya009
+email: barman.shreya09@gmail.com or shreya09@bu.edu
