--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Shreya Barman
-description: Early-career management graduate | Digital Strategy · Product & Project Management · Business Analysis
+description: Early Career management graduate | Digital Strategy · Product & Project Management · Business Analysis
 
 # Theme
 remote_theme: pages-themes/cayman@v0.2.0
